shortening a string, the old batch renaming is used only at folders

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">La extensió no pot estar buida</string>
     <string name="source_file_doesnt_exist">El fitxer %s no existeix</string>
     <string name="prepend_filenames">Posar abans noms de fitxer</string>
-    <string name="append_filenames">Afegeix noms de fitxer (abans de l\'extensió de fitxer)</string>
+    <string name="append_filenames">Afegeix noms de fitxer</string>
     <string name="rename_date_time_pattern">%Y - any\n%M - mes\n%D - dia\n%h - hora\n%m - minut\n%s - segon</string>
 
     <!-- Copy / Move -->
