--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Η επέκταση δεν μπορεί να είναι κενή</string>
     <string name="source_file_doesnt_exist">To αρχείο προέλευσης %s δεν υπάρχει</string>
     <string name="prepend_filenames">Προεπιλεγμένα ονόματα αρχείων</string>
-    <string name="append_filenames">Προσθέστε ονόματα αρχείων (πρίν την επέκταση)</string>
+    <string name="append_filenames">Προσθέστε ονόματα αρχείων</string>
     <string name="rename_date_time_pattern">%Y - έτος\n%M - μήνας\n%D - ημέρα\n%h - ώρα\n%m - λεπτό\n%s - δευτ/το</string>
 
     <!-- Copy / Move -->
