--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Ekstensi tidak boleh kosong</string>
     <string name="source_file_doesnt_exist">Berkas sumber %s tidak ada</string>
     <string name="prepend_filenames">Tambah akhiran nama berkas</string>
-    <string name="append_filenames">Tambah awalan nama berkas (sebelum ekstensi berkas)</string>
+    <string name="append_filenames">Tambah awalan nama berkas</string>
     <string name="rename_date_time_pattern">%Y - tahun\n%M - bulan\n%D - hari\n%h - jam\n%m - menit\n%s - detik</string>
 
     <!-- Copy / Move -->
