--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Extensie mag niet leeg zijn</string>
     <string name="source_file_doesnt_exist">Bronbestand %s bestaat niet</string>
     <string name="prepend_filenames">Voor bestandsnaam</string>
-    <string name="append_filenames">Na bestandsnaam (voor extensie)</string>
+    <string name="append_filenames">Na bestandsnaam</string>
     <string name="rename_date_time_pattern">%Y - jaar\n%M - maand\n%D - dag\n%h - uur\n%m - minuut\n%s - seconde</string>
 
     <!-- Copy / Move -->
