--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">A extensão não pode ficar em branco</string>
     <string name="source_file_doesnt_exist">Arquivo de origem %s não existe</string>
     <string name="prepend_filenames">Adicionar ao início dos nomes</string>
-    <string name="append_filenames">Adicionar ao fim dos nomes (antes da extensão)</string>
+    <string name="append_filenames">Adicionar ao fim dos nomes</string>
     <string name="rename_date_time_pattern">%Y - ano\n%M - mês\n%D - dia\n%h - hora\n%m - minuto\n%s - segundo</string>
 
     <!-- Copy / Move -->
