--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Prípona nesmie byť prázdna</string>
     <string name="source_file_doesnt_exist">Zdrojový súbor %s neexistuje</string>
     <string name="prepend_filenames">Pridať pred názvy súborov</string>
-    <string name="append_filenames">Pridať za názvy súborov (pred prípony)</string>
+    <string name="append_filenames">Pridať za názvy súborov</string>
     <string name="rename_date_time_pattern">%Y - rok\n%M - mesiac\n%D - deň\n%h - hodina\n%m - minúta\n%s - sekunda</string>
 
     <!-- Copy / Move -->
