--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Розширення не може бути порожнім</string>
     <string name="source_file_doesnt_exist">Вихідний файл %s не існує</string>
     <string name="prepend_filenames">Префікс імен файлів</string>
-    <string name="append_filenames">Суфікс імен файлів (перед розширенням)</string>
+    <string name="append_filenames">Суфікс імен файлів</string>
     <string name="rename_date_time_pattern">%Y - рік\n%M - місяць\n%D - день\n%h - година\n%m - хвилина\n%s - секунда</string>
 
     <!-- Copy / Move -->
