--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Filtypen kan ikke stå tom</string>
     <string name="source_file_doesnt_exist">Kildefilen %s eksisterer ikke</string>
     <string name="prepend_filenames">Tilføj forrest til filnavne</string>
-    <string name="append_filenames">Tilføj bagerst til filnavne (foran filtypenavnet)</string>
+    <string name="append_filenames">Tilføj bagerst til filnavne</string>
     <string name="rename_date_time_pattern">%Y - år\n%M - måned\n%D - dag\n%h - time\n%m - minut\n%s - sekund</string>
 
     <!-- Copy / Move -->
