--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">La extensión no puede estar vacía</string>
     <string name="source_file_doesnt_exist">El archivo %s no existe</string>
     <string name="prepend_filenames">Preponer los nombres de archivo</string>
-    <string name="append_filenames">Adjuntar nombres de archivos (antes de la extensión de archivo)</string>
+    <string name="append_filenames">Adjuntar nombres de archivos</string>
     <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
