--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">A kiterjesztés nem lehet üres</string>
     <string name="source_file_doesnt_exist">A forrás fájl %s nem létezik</string>
     <string name="prepend_filenames">Fájlnevek megadása</string>
-    <string name="append_filenames">Fájlnevek csatolása (fájl kiterjesztés előtt)</string>
+    <string name="append_filenames">Fájlnevek csatolása</string>
     <string name="rename_date_time_pattern">%É - év\\n%H - hónap\\n%N - nap\\n%ó - óra\\n%p - perc\\n%mp - másodperc</string>
 
     <!-- Copy / Move -->
