--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">A extensão não pode estar vazia</string>
     <string name="source_file_doesnt_exist">O ficheiro de origem %s não existe</string>
     <string name="prepend_filenames">Introduzir antes do nome do ficheiro</string>
-    <string name="append_filenames">Introduzir depois do nome do ficheiro (e antes da extensão)</string>
+    <string name="append_filenames">Introduzir depois do nome do ficheiro</string>
     <string name="rename_date_time_pattern">%Y - ano\n%M - mês\n%D - dia\n%h - horas\n%m - minutos\n%s - segundos</string>
 
     <!-- Copy / Move -->
