--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Расширение не может быть пустым</string>
     <string name="source_file_doesnt_exist">Исходный файл \"%s\" не существует</string>
     <string name="prepend_filenames">Перед именем файла</string>
-    <string name="append_filenames">После имени файла (до расширения)</string>
+    <string name="append_filenames">После имени файла</string>
     <string name="rename_date_time_pattern">%Y - год\n%M - месяц\n%D - день\n%h - час\n%m - минута\n%s - секунда</string>
 
     <!-- Copy / Move -->
