--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Končnica ne more biti prazna</string>
     <string name="source_file_doesnt_exist">Datoteka %s ne obstaja</string>
     <string name="prepend_filenames">Pripravi mena datotek</string>
-    <string name="append_filenames">Dodaj imena datotek (pred končnico)</string>
+    <string name="append_filenames">Dodaj imena datotek</string>
     <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
