--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -63,7 +63,7 @@
     <string name="extension_cannot_be_empty">Uzantı boş olamaz</string>
     <string name="source_file_doesnt_exist">%s kaynak dosyası mevcut değil</string>
     <string name="prepend_filenames">Ön dosya adları</string>
-    <string name="append_filenames">Dosya adlarını ekle (dosya uzantısından önce)</string>
+    <string name="append_filenames">Dosya adlarını ekle</string>
     <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
