--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
     <string name="cancel">Annuler</string>
     <string name="save_as">Enregistrer sous</string>
     <string name="file_saved">Fichier enregistré</string>
-    <string name="invalid_file_format">Format de fichier incorrect</string>
+    <string name="invalid_file_format">Format de fichier incorrect</string>c
     <string name="out_of_memory_error">Erreur : mémoire insuffisante</string>
     <string name="an_error_occurred">Une erreur est survenue : %s</string>
     <string name="open_with">Ouvrir avec</string>
@@ -239,7 +239,7 @@
     <string name="ascending">Croissant</string>
     <string name="descending">Décroissant</string>
     <string name="use_for_this_folder">Utiliser pour ce dossier uniquement</string>
-    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
+    <string name="sort_numeric_parts">Trier les parties numériques</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Voulez-vous vraiment effectuer la suppression ?</string>
@@ -278,9 +278,9 @@
     <string name="go_to_settings">Aller aux Paramètres</string>
     <string name="protection_setup_successfully">Mot de passe défini. Veuillez réinstaller l\'application en cas problèmes de réinitialisation.</string>
     <string name="fingerprint_setup_successfully">Protection définie. Veuillez réinstaller l\'application en cas problèmes de réinitialisation.</string>
-    <string name="lock_folder">Lock folder</string>
-    <string name="unlock_folder">Unlock folder</string>
-    <string name="lock_folder_notice">This protection works in this app only, it is not supposed to replace a real systemwide folder encryption.</string>
+    <string name="lock_folder">Verrouiller le dossier</string>
+    <string name="unlock_folder">Déverrouiller le dossier</string>
+    <string name="lock_folder_notice">Le verrouillage ne fonctionne que dans cette application. Cette protection ne remplace pas un cryptage de dossier système.</string>
 
     <!-- Times -->
     <string name="yesterday">Hier</string>
