--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
     <string name="cancel">Annuler</string>
     <string name="save_as">Enregistrer sous</string>
     <string name="file_saved">Fichier enregistré</string>
-    <string name="invalid_file_format">Format de fichier incorrect</string>c
+    <string name="invalid_file_format">Format de fichier incorrect</string>
     <string name="out_of_memory_error">Erreur : mémoire insuffisante</string>
     <string name="an_error_occurred">Une erreur est survenue : %s</string>
     <string name="open_with">Ouvrir avec</string>
