show GPS coordinates at the Properties window

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -168,6 +168,8 @@
     <string name="camera">Fotoaparát</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Název skladby</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">Barva pozadí</string>
