--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -177,6 +177,8 @@
     <string name="camera">Camera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Teitl trac</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">Lliw cefndir</string>
