--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -166,6 +166,8 @@
     <string name="camera">Kamera/aparat</string>
     <string name="exif">Dane EXIF</string>
     <string name="song_title">Tytuł piosenki</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">Tło</string>
