--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -164,6 +164,8 @@
     <string name="camera">Câmera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Título da música</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">Cor de fundo</string>
