--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -165,6 +165,8 @@
     <string name="camera">Câmara</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Título da faixa</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">Cor de fundo</string>
