--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -168,6 +168,8 @@
     <string name="camera">Fotoaparát</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Názov skladby</string>
+    <string name="gps_coordinates">GPS súradnice</string>
+    <string name="altitude">Nadmorská výška</string>
 
     <!-- Color customization -->
     <string name="background_color">Farba pozadia</string>
