--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -162,6 +162,8 @@
     <string name="camera">Camera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Song title</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">배경 색상</string>
