--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -170,6 +170,8 @@
     <string name="camera">Fotoaparat</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Naslov pesmi</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">Barva ozadja</string>
