--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -162,6 +162,8 @@
     <string name="camera">相機</string>
     <string name="exif">EXIF</string>
     <string name="song_title">歌名</string>
+    <string name="gps_coordinates">GPS coordinates</string>
+    <string name="altitude">Altitude</string>
 
     <!-- Color customization -->
     <string name="background_color">背景顏色</string>
