--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -165,8 +165,8 @@
     <string name="camera">Càmera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Títol de la canço</string>
-    <string name="gps_coordinates">GPS coordinates</string>
-    <string name="altitude">Altitude</string>
+    <string name="gps_coordinates">Coordenades GPS</string>
+    <string name="altitude">Altitud</string>
 
     <!-- Color customization -->
     <string name="background_color">Color del fons</string>
