--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -165,8 +165,8 @@
     <string name="camera">Cámara</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Título de la canción</string>
-    <string name="gps_coordinates">GPS coordinates</string>
-    <string name="altitude">Altitude</string>
+    <string name="gps_coordinates">Coordenadas GPS</string>
+    <string name="altitude">Altitud</string>
 
     <!-- Color customization -->
     <string name="background_color">Color del fondo</string>
