--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -165,8 +165,8 @@
     <string name="camera">Κάμερα</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Τίτλος τραγουδιού</string>
-    <string name="gps_coordinates">GPS coordinates</string>
-    <string name="altitude">Altitude</string>
+    <string name="gps_coordinates">Συντεταγμένες GPS</string>
+    <string name="altitude">Υψόμετρο</string>
 
     <!-- Color customization -->
     <string name="background_color">Χρώμα φόντου</string>
